--- a/sales/templates/sales/sales.html
+++ b/sales/templates/sales/sales.html
@@ -1,7 +1,13 @@
 {% extends "myStock/base.html" %}
 
 {%block content%}
-{% for p in products%}
-{{p.product_category.category}} {{p.product_brand}} {{p.product_package}} {{p.product_volume}}{{p.product_measure}}<br>
-{% endfor %}
+<form method="POST" action="{%url "sales:index"%}">
+  {% csrf_token %}
+  {% for p in products%}
+  {{p.product_category.category}} {{p.product_brand}} {{p.product_package}} {{p.product_volume}}{{p.product_measure}}<br>
+  <input class="center-align" type="number" min="0" max="{{p.available_quantity}}" step="1" name="{{p.id}}" value="0" style="width: 45px;"><br>
+  <input class="center-align" type="number" min="0" step="any" name="price" value="{{p.product_price}}" style="width: 45px;"><br>
+  {% endfor %}
+  <button class="waves-effect waves-light btn-large" type="submit" name="action">Adicionar</button><br>
+</form>
 {%endblock%}
